Remove another dependency