@@ -21,7 +21,7 @@
 
 package ee.jakarta.tck.pages.common.client.validation;
 
-import com.sun.ts.lib.util.TestUtil;
+import java.util.logging.Logger;
 
 /**
  * Returns a ValidationStrategy instance used to validate a response against a
@@ -31,6 +31,8 @@ import com.sun.ts.lib.util.TestUtil;
  * @version %I%
  */
 public class ValidationFactory {
+
+  private static final Logger LOGGER = Logger.getLogger(ValidationFactory.class.getName());
 
   /**
    * Private constructor as all interaction with the class is through the
@@ -55,13 +57,12 @@ public class ValidationFactory {
   public static ValidationStrategy getInstance(String validator) {
     try {
       Object o = Thread.currentThread().getContextClassLoader()
-          .loadClass(validator).newInstance();
+          .loadClass(validator).getConstructor().newInstance();
       if (o instanceof ValidationStrategy) {
         return (ValidationStrategy) o;
       }
     } catch (Throwable t) {
-      TestUtil.logMsg("[ValidationFactory] Unable to obtain "
-          + "ValidationStrategy instance: " + validator);
+      LOGGER.info("Unable to obtain " + "ValidationStrategy instance: " + validator);
     }
     return null;
   }
